Fix vulnerabilities