@@ -5,11 +5,14 @@ public class CommandExecutor {
     /**
      * Runs a diagnostic command triggered from the support portal.
      *
-     * VULN (CWE-78, OS Command Injection): diagName originates from a remote-control
-     * request and is passed to Runtime.exec() without validation.
+     * FIX (was CWE-78, OS Command Injection): Runtime.exec(String) only ever splits on
+     * whitespace itself (no shell involved), so the real issue here was argument
+     * injection - a diagName containing spaces could smuggle in extra, unintended
+     * arguments/flags for diag.sh. ProcessBuilder passes diagName as its own argv
+     * element, so diag.sh always receives exactly one argument, regardless of content.
      */
     public String runDiagnostic(String diagName) throws Exception {
-        Process p = Runtime.getRuntime().exec("/opt/thermostat/diag.sh " + diagName);
+        Process p = new ProcessBuilder("/opt/thermostat/diag.sh", diagName).start();
         p.waitFor();
         return "Diagnostic '" + diagName + "' executed, exit code " + p.exitValue();
     }
